# Logger_lib_v.3

./: .clang-format  CMakeLists.txt  Doxyfile  LICENSE  README.md
examples/: CMakeLists.txt
examples/basic_usage/: example.md  main.cpp
include/logger/: simple_logger.hpp
src/core/: simple_logger.cpp
tests/: CMakeLists.txt
tests/unit/: test_simple_logger.cpp
